Comentamos los documentos html y añadimos animaciones finales

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mallorca Coffe Cup</title>
-    <link rel="stylesheet" type="text/css" href="indexstyle.css" title="style" />
+    <link rel="stylesheet" type="text/css" href="indexstyle.css" title="style" />  <!--Enlazamos el documento con otro archivo css para darle estilo-->
     <link rel="icon" type="image/jpg" href="cafee.jpg"/>
 </head>
 <body> 
-    <nav>
+    <nav> <!--Creamos la barra de navegacion con una imagen y los apartados-->
         <div class="imagen-cafe">
         <a href="index.html">
             <img src="cafee.jpg" alt="Logo" href="index.html">
@@ -21,7 +21,7 @@
               <li><a href="carta.html">Carta</a></li>
               <li><a href="reservas.html">Reservas</a></li>
               <div class="submenu">
-                <li><a>Nuestros Locales</a>
+                <li><a>Nuestros Locales</a>  <!--Creamos un submenu desplegable-->
                   <ul>
                     <li style="border-top-right-radius: 10px;border-top-left-radius: 10px;"><a href="nuestroslocales.html">Palma</a></li>
                     <li><a href="nuestroslocales.html">Inca</a></li>
@@ -44,7 +44,7 @@
           <p>Podrá informarse sobre los mejores Cafés de Mallorca. Puede echar un vistazo a la Carta y ver precios,</p>
           hacer una reserva o bien mirar nuestras ubicaciones en la isla. También proporcionamos nuestros enlaces a las Redes sociales y botón para Chat de Whatsapp.</p>
 
-      <section class="galeria">
+      <section class="galeria"> <!--Creamos una galeria de imagenes-->
         <input type="radio" name="galeria" id="imagen1">
         <label for="imagen1">
           <img src="cafeteria.jpg" alt="Imagen 1">
@@ -61,7 +61,7 @@
         </label>
       </section>
       </div> 
-      <div class="Derechos">
+      <div class="Derechos"> <!--Creamos la pie de página-->
         <br>
         <p>Todos los derechos reservados © 2023 Mallorca Coffe Cup</p>
         <p>Política de privacidad | Términos y condiciones | Aviso legal</p>
