--- a/reservas.html
+++ b/reservas.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="reservas.css" title="style" />
+    <link rel="stylesheet" type="text/css" href="reservas.css" title="style" />  <!--Enlazamos el documento con otro archivo css para darle estilo-->
     <link rel="icon" type="image/jpg" href="cafee.jpg"/>
     <title>Reservas | Mallorca Coffe Cup</title>
 </head>
 <body>
   
-  <nav>
+  <nav> <!--Creamos la barra de navegacion con una imagen y los apartados-->
     <div class="imagen-cafe">
     <a href="index.html">
         <img src="cafee.jpg" alt="Logo" href="index.html">
@@ -22,7 +22,7 @@
           <li><a href="carta.html">Carta</a></li>
           <li><a href="reservas.html" style="color: black;">Reservas</a></li>
           <div class="submenu">
-            <li><a>Nuestros Locales</a>
+            <li><a>Nuestros Locales</a>  <!--Creamos un submenu desplegable-->
               <ul>
                 <li style="border-top-right-radius: 10px;border-top-left-radius: 10px;"><a href="nuestroslocales.html">Palma</a></li>
                 <li><a href="nuestroslocales.html">Inca</a></li>
