--- a/carta.html
+++ b/carta.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="carta.css" title="style" />
+    <link rel="stylesheet" type="text/css" href="carta.css" title="style" />  <!--Enlazamos el documento con otro archivo css para darle estilo-->
     <link rel="icon" type="image/jpg" href="cafee.jpg"/>
     <title>Carta | Mallorca Coffe Cup</title>
 </head>
 <body>
-  <nav>
+  <nav>  <!--Creamos la barra de navegacion con una imagen y los apartados-->
     <div class="imagen-cafe">
     <a href="index.html">
         <img src="cafee.jpg" alt="Logo" href="index.html">
@@ -21,7 +21,7 @@
           <li><a href="carta.html" style="color: black;">Carta</a></li>
           <li><a href="reservas.html">Reservas</a></li>
           <div class="submenu">
-            <li><a>Nuestros Locales</a>
+            <li><a>Nuestros Locales</a>  <!--Creamos un submenu desplegable-->
               <ul>
                 <li style="border-top-right-radius: 10px;border-top-left-radius: 10px;"><a href="nuestroslocales.html">Palma</a></li>
                 <li><a href="nuestroslocales.html">Inca</a></li>
@@ -34,7 +34,7 @@
     </div>
   </nav>
 <div class="recuadro-grande">
- <div class="recuadro">
+ <div class="recuadro"> <!--Creamos el formulario de reserva de mesa con etiquetas label y imput-->
   <header>
     <br>
     <img src="cafecarta.png" alt="cartaimg">
@@ -182,7 +182,7 @@
     
  </div>
 </div>
-<div class="Derechos">
+<div class="Derechos"> <!--Creamos la pie de página-->
   <br>
   <p>Todos los derechos reservados © 2023 Mallorca Coffe Cup</p>
   <p>Política de privacidad | Términos y condiciones | Aviso legal</p>
