--- a/nuestroslocales.html
+++ b/nuestroslocales.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="nuestroslocales.css" title="style" />
+    <link rel="stylesheet" type="text/css" href="nuestroslocales.css" title="style" />  <!--Enlazamos el documento con otro archivo css para darle estilo-->
     <link rel="icon" type="image/jpg" href="cafee.jpg"/>
     <title>Nuestros Locales | Mallorca Coffe Cup</title>
 </head>
 
 <body>
 
-    <nav>
+    <nav> <!--Creamos la barra de navegacion con una imagen y los apartados-->
       <div class="imagen-cafe">
       <a href="index.html">
           <img src="cafee.jpg" alt="Logo" href="index.html">
@@ -23,7 +23,7 @@
             <li><a href="carta.html">Carta</a></li>
             <li><a href="reservas.html">Reservas</a></li>
             <div class="submenu">
-              <li><a style="color: black;">Nuestros Locales</a>
+              <li><a style="color: black;">Nuestros Locales</a> <!--Creamos un submenu desplegable-->
                 <ul>
                   <li style="border-top-right-radius: 10px;border-top-left-radius: 10px;"><a href="nuestroslocales.html">Palma</a></li>
                   <li><a href="nuestroslocales.html">Inca</a></li>
@@ -37,7 +37,7 @@
     </nav>
 
   <div class="recuadro">
-    <div class="columna-izquierda">
+    <div class="columna-izquierda"> <!--Creamos el texto de la página-->
       <div class="Palma">   
         <h2>Tenemos 3 cafeterías alrededor de Palma:<br></h2>   
         <p>
@@ -64,7 +64,7 @@
 
     </div>
   
-    <div class="mapas-derecha">
+    <div class="mapas-derecha"> <!--Importamos un frame de mapa de Google Maps a la página-->
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d158077.66290624277!2d2.947938!3d39.600019!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1297be989d2c9303%3A0x9e747b234fb76cc9!2sPalma%2C%20Balearic%20Islands%2C%20Spain!5e0!3m2!1sen!2sus!4v1679287821101!5m2!1sen!2sus" width="700" height="550" style="border: 0;" allowfullscreen="" loading="lazy"></iframe><hr>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d79340.52726841029!2d2.801767!3d39.721027!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1296e2079da0bb27%3A0xb56a7dcf1f8d986c!2sInca%2C%20Balearic%20Islands%2C%20Spain!5e0!3m2!1sen!2sus!4v1679288100809!5m2!1sen!2sus" width="700" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe><hr>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d158496.78222458196!2d2.825924!3d39.489239!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12978556e96b7e59%3A0xbfe0e2e65d0477f5!2sLlucmajor%2C%20Balearic%20Islands%2C%20Spain!5e0!3m2!1sen!2sus!4v1679288240872!5m2!1sen!2sus" width="700" height="550" style="border:0;" allowfullscreen="" loading="lazy"></iframe><hr>
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <div class="Derechos">
+  <div class="Derechos"> <!--Creamos la pie de página-->
     <br>
     <p>Todos los derechos reservados © 2023 Mallorca Coffe Cup</p>
     <p>Política de privacidad | Términos y condiciones | Aviso legal</p>
